--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_weight="1"
-            android:id="@+id/container"
+            android:id="@+id/fragmentContainer"
             android:layout_height="0dp" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -18,6 +18,5 @@
             app:menu="@menu/negivation_menu_tabs"
             style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
             android:layout_height="wrap_content"/>
-
     </LinearLayout>
 </layout>
