--- a/app/src/main/res/menu/negivation_menu_tabs.xml
+++ b/app/src/main/res/menu/negivation_menu_tabs.xml
@@ -14,4 +14,9 @@
         android:id="@+id/action_shop"
         android:icon="@drawable/ic_baseline_shopping_cart"
         android:title="@string/shop_label" />
+
+    <item
+        android:id="@+id/action_checkout"
+        android:icon="@drawable/ic_baseline_shopping_cart"
+        android:title="@string/shop_label" />
 </menu>
