--- a/app/src/main/res/menu/negivation_menu_tabs.xml
+++ b/app/src/main/res/menu/negivation_menu_tabs.xml
@@ -22,6 +22,6 @@
 
     <item
         android:id="@+id/product_list"
-        android:icon="@drawable/ic_baseline_shopping_cart"
+        android:icon="@android:drawable/star_big_on"
         android:title="@string/shop_product_list" />
 </menu>
