--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,13 @@
         android:orientation="vertical"
         android:layout_width="match_parent">
 
-        <FrameLayout
+        <androidx.fragment.app.FragmentContainerView
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:id="@+id/fragmentContainer"
+            app:navGraph="@navigation/nav_graph"
+            app:defaultNavHost="true"
             android:layout_height="0dp" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
