added on how to request permission from user and renamed a fragment

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -43,7 +43,7 @@
     </fragment>
     <fragment
         android:id="@+id/productDetails"
-        android:name="com.example.apprajapati.myshop.products.ProductDetails"
+        android:name="com.example.apprajapati.myshop.products.ProductDetailsFragment"
         android:label="fragment_product_details"
         tools:layout="@layout/fragment_product_details" />
 </navigation>
