--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -11,7 +11,7 @@
         android:id="@+id/containerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".products.ProductDetails">
+        tools:context=".products.ProductDetailsFragment">
 
         <ImageView
             android:id="@+id/productImage"
