--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -11,7 +11,22 @@
         android:id="@+id/containerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".products.ProductDetailsFragment">
+        tools:context=".shop.DetailFragment" >
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/app_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"/>
+        </com.google.android.material.appbar.AppBarLayout>
 
         <ImageView
             android:id="@+id/productImage"
@@ -24,7 +39,7 @@
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/app_bar"
             tools:srcCompat="@drawable/delicate_bottle" />
 
         <TextView
@@ -72,15 +87,12 @@
 
         <TextView
             android:id="@+id/priceText"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
+            android:layout_margin="16dp"
             android:textStyle="bold"
             android:textSize="28sp"
             android:textColor="@android:color/black"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/sizeText"
             tools:text="$24.50" />
@@ -93,8 +105,18 @@
             android:backgroundTint="@color/colorAccent"
             android:text="@string/add_to_cart_label"
             android:textColor="@android:color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/priceText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/sizeText" />
+
+        <Button
+            android:id="@+id/removeFromCartButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:backgroundTint="@color/colorGrey"
+            android:text="@string/remove_from_cart_label"
+            android:textColor="@android:color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/addToCartButton" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
